[package]
name = "sweep-bptree"
version = "0.2.0"
edition = "2021"
description = "In memory locality aware b+ tree, faster for ordered access"
license = "MIT OR Apache-2.0"
keywords = ["btree", "datastructure"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
rand = "0.8"

[features]
statistic = []

[[bench]]
name = "bench"
harness = false
