[package]
name = "sweep-bptree"
version = "0.3.0"
edition = "2021"
description = "In memory locality aware b+ tree, faster for ordered access"
license = "MIT OR Apache-2.0"
keywords = ["btree", "datastructure"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "bench_node"
harness = false

[[bench]]
name = "searcher"
harness = false

